# rust_yt_scraper

./: .gitignore  CLAUDE.md  COMMENT.json  Cargo.toml  README.md  comment_response.json  content_test.json  continuation_items_test.json  output.json  pyproject.toml  replies.json  ytcfg_p1.json
src/: lib.rs  main.rs
src/extract/: comment.md  comment_extract.rs  error_msgs.rs  helper.rs  mod.rs  youtube_extractor.rs
src/models/: mod.rs  models.rs
