[package]
name = "rust-youtube-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
async-std = { version = "1.13.1", features=["attributes", "tokio1"] }
regex = "1.11.1"
serde_json = "1.0.140"
base64 = "0.22.1"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
