[package]
name = "yt-scraper"
version = "0.1.1"
description = "Scrape YouTube video metadata and comments."
authors = ["Ryan Weiler ryanweiler92@gmail.com"]
license = "MIT"
edition = "2024"

[lib]
name = "yt_scraper"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
async-std = { version = "1.13.1", features=["attributes", "tokio1"] }
regex = "1.11.1"
serde_json = "1.0.140"
base64 = "0.22.1"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.pyo3]
version = "0.22"
optional = true
features = ["extension-module"]

[features]
python = ["pyo3"]
